<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <EditText
        android:id="@+id/str1"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:background="@drawable/bg_corners_white_b"
        android:hint="@string/city_lat"
        android:paddingLeft="20dip"/>
    <EditText
        android:id="@+id/str2"
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_below="@+id/str1"
        android:background="@drawable/bg_corners_white_b"
        android:hint="@string/bus_lon_address"
        android:paddingLeft="20dip"
        android:layout_marginTop="10dip"/>
    <Button
        android:id="@+id/search_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_search"
        android:layout_below="@+id/str2"
        android:gravity="center" />
    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_below="@+id/str2"
        android:layout_toRightOf="@+id/search_do"
        android:gravity="center" />
</RelativeLayout>
