<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="500dp"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ttbar1"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="match_parent"
            android:text="@string/dlr_info"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:textSize="30sp"/>
        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="30dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:src="@drawable/action_close"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textColor="@color/bai"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:background="@drawable/bg_corners_white_b"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_height="match_parent"
            android:text="@string/sex"
            android:textColor="@color/bai"
            android:textSize="20sp"/>
        <Spinner
            android:id="@+id/sex"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:entries="@array/sex"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_height="match_parent"
            android:text="@string/age"
            android:textColor="@color/bai"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:background="@drawable/bg_corners_white_b"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_height="match_parent"
            android:text="@string/工作单位"
            android:textColor="@color/bai"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/corp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:background="@drawable/bg_corners_white_b"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:layout_height="match_parent"
            android:text="@string/职务"
            android:textColor="@color/bai"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/zw"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:textSize="20sp"
            android:gravity="center_vertical|left"
            android:paddingLeft="5dp"
            android:background="@drawable/bg_corners_white_b"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/comit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/confirm"
            android:background="@drawable/bg_corners_6959cd"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/cansel"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/reset"
            android:background="@drawable/bg_corners_6959cd"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>
