<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quanta.aj.yunanjian.activity.enforcement.CaseEditActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--企业信息-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@color/ttbar1">
            <TextView
                android:text="@string/corpinfo"
                android:layout_width="0dp"
                android:layout_weight="9"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:textColor="@color/bai"
                android:paddingLeft="20dp"
                android:textSize="20sp"
                android:layout_gravity="center_vertical|left"/>
            <ImageView
                android:id="@+id/leftbtn"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/back_jiantou"/>
        </LinearLayout>
        <ListView
            android:id="@+id/qyxx"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <!--执法信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/enfinfo"
            android:gravity="center_vertical|left"
            android:textColor="@color/bai"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:background="@color/ttbar1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:text="@string/unionable" />
                <RadioGroup
                    android:id="@+id/unionable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/yes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/yes"/>
                    <RadioButton
                        android:id="@+id/no"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/no"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:text="@string/ounionable" />
                <RadioGroup
                    android:id="@+id/ounionable"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/oyes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/yes"/>
                    <RadioButton
                        android:id="@+id/ono"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/no"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
            </LinearLayout>
        </LinearLayout>
        <!--文书列表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/comit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:textColor="@color/bai"
                android:background="@drawable/bg_corners_6959cd"
                android:text="@string/addenf"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
